--- a/src/app/components/promo/promo.component.html
+++ b/src/app/components/promo/promo.component.html
@@ -234,7 +234,7 @@
                         (click)="openDialog(3,false, row.promoId, row.creatorUsername, row.retailerName, row.productName,row.declined,row.comment, row.dateStart, row.dateEnd, row.rebate,row.isRebateCascade, row.regularSale, row.type, row.estimateRopi, row.ropi, row.estimateRopiCash, row.ropiCash, row.estimatePromoSale, row.expenses, row.price, row.resultSale, row.estimateGP, row.gp, row.estimateGPCash, row.gpCash)">
                         <mat-icon area-label="Delete">delete</mat-icon>
                     </button>
-                    <button mat-icon-button color="primary" *ngIf="type==='MY_CONFIRMATION'"
+                    <button mat-stroked-button color="primary" *ngIf="type==='MY_CONFIRMATION'"
                         (click)="openDialog(3,true, row.promoId,row.creatorUsername, row.retailerName, row.productName,row.declined,row.comment, row.dateStart, row.dateEnd, row.rebate,row.isRebateCascade, row.regularSale, row.type, row.estimateRopi, row.ropi, row.estimateRopiCash, row.ropiCash, row.estimatePromoSale, row.expenses, row.price, row.resultSale, row.estimateGP, row.gp, row.estimateGPCash, row.gpCash)">
                         <p style="color:red">Decline</p>
                     </button>
