--- a/src/app/components/product-price-scanner/product-price-scanner.component.html
+++ b/src/app/components/product-price-scanner/product-price-scanner.component.html
@@ -1,6 +1,6 @@
 <div class="header">
     <img src="../../../assets/Store Metrics Logo PNG.png" alt="SC icon" width="80" height="80" style="float:left;">
-    <h2 style="height:80px;"> <span>Price scanner</span> </h2>
+    <h2 style="height:80px; margin-right: 9%;"> <span>Price scanner</span> </h2>
 </div>
 
 <div class="centered font mt">
