CRUD za product price scanner

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -78,6 +78,10 @@
                 <a mat-list-item class="nav-list-item" [routerLink]="['product']" (click)="updateTitle('Products')">
                     <mat-icon class="nav-icon">fastfood</mat-icon>Products
                 </a>
+                <a mat-list-item class="nav-list-item" [routerLink]="['priceScanner']"
+                    (click)="updateTitle('Price Scanner')">
+                    <mat-icon class="nav-icon">fastfood</mat-icon>Price Scanner
+                </a>
                 <a mat-list-item class="nav-list-item" [routerLink]="['uploads']"
                     (click)="updateTitle('Import / Export')">
                     <mat-icon class="nav-icon">cloud_upload</mat-icon>Import / Export
