--- a/src/app/components/product-price-scanner/product-price-scanner.component.html
+++ b/src/app/components/product-price-scanner/product-price-scanner.component.html
@@ -65,6 +65,28 @@
             </mat-cell>
         </ng-container>
 
+        <ng-container matColumnDef="actions">
+            <mat-header-cell *matHeaderCellDef>
+                <button mat-icon-button color="primary">
+                    <mat-icon (click)="openDialog(1)" class="whitetext">add</mat-icon>
+                </button>
+            </mat-header-cell>
+            <mat-cell *matCellDef="let row; let i=index">
+                <button mat-icon-button color="primary">
+                    <mat-icon area-label="Edit"
+                        (click)="openDialog(2, row.productPriceScannerId, row.productName, row.manufacturer, row.weight)">
+                        edit
+                    </mat-icon>
+                </button>
+
+                <button mat-icon-button color="primary">
+                    <mat-icon area-label="Delete"
+                        (click)="openDialog(3, row.productPriceScannerId, row.productName, row.manufacturer, row.weight)">
+                        delete </mat-icon>
+                </button>
+            </mat-cell>
+        </ng-container>
+
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
         <mat-row style="cursor:pointer;" *matRowDef="let row; columns: displayedColumns">
         </mat-row>
