--- a/src/app/components/promo/promo.component.html
+++ b/src/app/components/promo/promo.component.html
@@ -214,9 +214,8 @@
                             (click)="openDialog(6,false,row.promoId,row.creatorUsername, row.retailerName, row.productName,row.declined,row.comment, '', '', row.rebate,row.isRebateCascade, row.regularSale, row.type, row.estimateRopi, row.ropi, row.estimateRopiCash, row.ropiCash, row.estimatePromoSale, row.expenses, row.price, 0, row.gp)">
                             <mat-icon area-label="Copy">filter_none</mat-icon>
                         </button>
-                        <button mat-stroked-button color="primary" *ngIf="type === 'MY_CONFIRMATION'"
-                            (click)="openDialog(2,false, row.promoId, row.creatorUsername, row.retailerName, row.productName,row.declined,row.comment, row.dateStart, row.dateEnd, row.rebate,row.isRebateCascade, row.regularSale, row.type, row.estimateRopi, row.ropi, row.estimateRopiCash, row.ropiCash, row.estimatePromoSale, row.expenses, row.price, row.resultSale, row.gp)"><a
-                                class=fix style="color:green">Confirm</a>
+                        <button mat-icon-button color="primary" *ngIf="type === 'MY_CONFIRMATION'"
+                            (click)="openDialog(2,false, row.promoId, row.creatorUsername, row.retailerName, row.productName,row.declined,row.comment, row.dateStart, row.dateEnd, row.rebate,row.isRebateCascade, row.regularSale, row.type, row.estimateRopi, row.ropi, row.estimateRopiCash, row.ropiCash, row.estimatePromoSale, row.expenses, row.price, row.resultSale, row.gp)"><i class="material-icons checkmark">done</i>
                         </button>
     
                         <button mat-icon-button color="primary" *ngIf="type!='MY_CONFIRMATION' && row.creatorUsername == loggedUser"
@@ -225,10 +224,10 @@
                         </button>
                         <button mat-icon-button color="primary" *ngIf="type==='MY_CONFIRMATION'"
                             (click)="openDialog(3,true, row.promoId,row.creatorUsername, row.retailerName, row.productName,row.declined,row.comment, row.dateStart, row.dateEnd, row.rebate,row.isRebateCascade, row.regularSale, row.type, row.estimateRopi, row.ropi, row.estimateRopiCash, row.ropiCash, row.estimatePromoSale, row.expenses, row.price, row.resultSale, row.gp)">
-                            <p style="color:red">Decline</p>
+                            <i class="material-icons cancel-icon">cancel</i>
                         </button>
     
-                        <button mat-icon-button color="primary"
+                        <button mat-stroked-button color="primary"
                             *ngIf="row.creatorUsername == loggedUser && type === 'PROMO_LIST' && !row.resultSale && calculateDiff(row.dateEnd) >= 3"
                             (click)="openDialog(4,false, row.promoId, row.creatorUsername, row.retailerName, row.productName,row.declined,row.comment, row.dateStart, row.dateEnd, row.rebate,row.isRebateCascade, row.regularSale, row.type, row.estimateRopi, row.ropi, row.estimateRopiCash, row.ropiCash, row.estimatePromoSale, row.expenses, row.price, row.resultSale, row.gp)">
                             <mat-icon area-label="Edit">edit</mat-icon>
