--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -79,8 +79,8 @@
                     <mat-icon class="nav-icon">fastfood</mat-icon>Products
                 </a>
                 <a mat-list-item class="nav-list-item" [routerLink]="['priceScanner']"
-                    (click)="updateTitle('Price Scanner')">
-                    <mat-icon class="nav-icon">fastfood</mat-icon>Price Scanner
+                    (click)="updateTitle('Price Scanner Products')">
+                    <mat-icon class="nav-icon">ballot</mat-icon>Price Scanner Products
                 </a>
                 <a mat-list-item class="nav-list-item" [routerLink]="['uploads']"
                     (click)="updateTitle('Import / Export')">
