--- a/src/app/dialogs/product-price-scanner-dialog/product-price-scanner-dialog.component.html
+++ b/src/app/dialogs/product-price-scanner-dialog/product-price-scanner-dialog.component.html
@@ -5,6 +5,13 @@
     <form class="mat-dialog-content" #formControl="ngForm">
         <div class="form">
             <mat-form-field>
+                <input type="text" matInput placeholder="Category" [(ngModel)]="data.category" name="category"
+                    [disabled]="flag==3" required />
+            </mat-form-field>
+        </div>
+
+        <div class="form">
+            <mat-form-field>
                 <input type="text" matInput placeholder="Product name" [(ngModel)]="data.productName" name="productName"
                     [disabled]="flag==3" required />
             </mat-form-field>
