--- a/src/app/components/promo/promo.component.html
+++ b/src/app/components/promo/promo.component.html
@@ -131,34 +131,37 @@
             <ng-container matColumnDef="expenses">
                 <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Fix
                     investment Net</mat-header-cell>
-                <mat-cell *matCellDef="let row">{{ row.expenses }} din</mat-cell>
+                <mat-cell *matCellDef="let row">{{ row.expenses | number:'':'es' }} din</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="regularSale">
                 <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Reg
                     sale</mat-header-cell>
-                <mat-cell *matCellDef="let row">{{ row.regularSale }} din</mat-cell>
+                <mat-cell *matCellDef="let row">{{ row.regularSale }}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="estimatePromoSale">
                 <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Est sale
                 </mat-header-cell>
                 <mat-cell *matCellDef="let row">{{ row.estimatePromoSale
-                    }} din</mat-cell>
+                    }}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="estimateUplift">
                 <mat-header-cell class="text-bold" *matHeaderCellDef mat-sort-header class="whitetext column-name">Est
                     uplift</mat-header-cell>
-                <mat-cell class="text-bold" *matCellDef="let row">{{
-                    format(row.estimatePromoSale,row.regularSale)}}%</mat-cell>
+                <mat-cell class="text-bold" *matCellDef="let row">
+                    {{(row.estimatePromoSale / row.regularSale) * 100 - 100 >= 0 ? '+' : ''}}{{((row.estimatePromoSale /
+                    row.regularSale) * 100 - 100).toFixed(2)}}%
+                </mat-cell>
             </ng-container>
 
 
             <ng-container matColumnDef="estimateRopi">
                 <mat-header-cell class="text-bold" *matHeaderCellDef mat-sort-header class="whitetext column-name">Est
                     GP Uplift %</mat-header-cell>
-                <mat-cell class="text-bold" *matCellDef="let row">{{ (row.estimateRopi * 100 -
+                <mat-cell class="text-bold" *matCellDef="let row">{{row.estimateRopi * 100 -
+                    100 >= 0 ? '+' : ''}}{{ (row.estimateRopi * 100 -
                     100).toFixed(2)}}%</mat-cell>
             </ng-container>
 
@@ -176,14 +179,16 @@
             <ng-container matColumnDef="estimateGP">
                 <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Est SKU Promo
                     GP</mat-header-cell>
-                <mat-cell *matCellDef="let row">{{ row.estimateGP}}%</mat-cell>
+                <mat-cell class="text-bold" *matCellDef="let row">{{row.estimateGP >= 0 ? '+' : ''}}{{
+                    row.estimateGP.toFixed(2)}}%</mat-cell>
             </ng-container>
 
 
             <ng-container matColumnDef="estimateGPCash">
                 <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Est SKU Promo GP
                     abs</mat-header-cell>
-                <mat-cell *matCellDef="let row">{{ row.estimateGPCash}} din</mat-cell>
+                <mat-cell class="text-bold" *matCellDef="let row">{{ row.estimateGPCash | number:'':'es'}}
+                    din</mat-cell>
             </ng-container>
 
 
@@ -306,77 +311,66 @@
                 <ng-container matColumnDef="expenses">
                     <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Fix
                         investment Net</mat-header-cell>
-                    <mat-cell *matCellDef="let row">{{ row.expenses }} din</mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="price">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header
-                        class="whitetext column-name">Price</mat-header-cell>
-                    <mat-cell *matCellDef="let row">{{ row.price }} din</mat-cell>
+                    <mat-cell *matCellDef="let row">{{ row.expenses | number:'':'es' }} din</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="regularSale">
                     <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Reg
                         sale</mat-header-cell>
-                    <mat-cell *matCellDef="let row">{{ row.regularSale | number:'':'es'}}</mat-cell>
+                    <mat-cell *matCellDef="let row">{{ row.regularSale }}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="estimatePromoSale">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Est sale
+                <ng-container matColumnDef="resultSale">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Result sale
                     </mat-header-cell>
-                    <mat-cell *matCellDef="let row">{{ row.estimatePromoSale
-                        | number:'':'es'}}</mat-cell>
+                    <mat-cell *matCellDef="let row">{{ row.resultSale ? row.resultSale : 0 }}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="estimateUplift">
+                <ng-container matColumnDef="uplift">
                     <mat-header-cell class="text-bold" *matHeaderCellDef mat-sort-header
-                        class="whitetext column-name">Est
-                        uplift</mat-header-cell>
+                        class="whitetext column-name">Uplift</mat-header-cell>
                     <mat-cell class="text-bold" *matCellDef="let row">
                         <!-- {{format(row.estimatePromoSale,row.regularSale) >= 0 ? '+' : ''}}
                     {{format(row.estimatePromoSale,row.regularSale)}}% -->
-                        {{(row.estimatePromoSale / row.regularSale) * 100 - 100 >= 0 ? '+' :
-                        ''}}{{((row.estimatePromoSale /
+                        {{(row.resultSale / row.regularSale) * 100 - 100 >= 0 ? '+' :
+                        ''}}{{((row.resultSale /
                         row.regularSale) * 100 - 100).toFixed(2)}}%
                     </mat-cell>
                 </ng-container>
 
 
-                <ng-container matColumnDef="estimateRopi">
+                <ng-container matColumnDef="ropi">
                     <mat-header-cell class="text-bold" *matHeaderCellDef mat-sort-header
-                        class="whitetext column-name">Est
-                        GP Uplift %</mat-header-cell>
-                    <mat-cell class="text-bold" *matCellDef="let row">{{row.estimateRopi * 100 -
-                        100 >= 0 ? '+' : ''}}{{ (row.estimateRopi * 100 -
+                        class="whitetext column-name">GP Uplift %</mat-header-cell>
+                    <mat-cell class="text-bold" *matCellDef="let row">{{row.ropi * 100 -
+                        100 >= 0 ? '+' : ''}}{{ (row.ropi * 100 -
                         100).toFixed(2)}}%</mat-cell>
                 </ng-container>
 
 
-                <ng-container matColumnDef="estimateRopiCash">
+                <ng-container matColumnDef="ropiCash">
                     <mat-header-cell class="text-bold" *matHeaderCellDef mat-sort-header
-                        class="whitetext column-name">Est
-                        GP Uplift Abs</mat-header-cell>
+                        class="whitetext column-name">GP Uplift Abs</mat-header-cell>
                     <mat-cell class="text-bold" *matCellDef="let row">{{
-                        row.estimateRopiCash | number:'':'es'}}
+                        row.ropiCash ? row.ropiCash : 0 | number:'':'es'}}
                         din</mat-cell>
                 </ng-container>
 
 
 
 
-                <ng-container matColumnDef="estimateGP">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Est SKU Promo
+                <ng-container matColumnDef="promoGp2">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">SKU Promo
                         GP</mat-header-cell>
-                    <mat-cell class="text-bold" *matCellDef="let row">{{row.estimateGP >= 0 ? '+' : ''}}{{
-                        row.estimateGP.toFixed(2)}}%</mat-cell>
+                    <mat-cell class="text-bold" *matCellDef="let row">{{row.gp >= 0 ? '+' : ''}}{{
+                        row.gp ? row.gp.toFixed(2) : 0}}%</mat-cell>
                 </ng-container>
 
 
-                <ng-container matColumnDef="estimateGPCash">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Est SKU Promo GP
+                <ng-container matColumnDef="promoGp2Cash">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">SKU Promo GP
                         abs</mat-header-cell>
-                    <mat-cell class="text-bold" *matCellDef="let row">{{ row.estimateGPCash |
-                        number:'':'es'}}
+                    <mat-cell class="text-bold" *matCellDef="let row">{{ row.gpCash ? row.gpCash : 0 | number:'':'es'}}
                         din</mat-cell>
                 </ng-container>
 
@@ -445,8 +439,8 @@
                     </mat-cell>
                 </ng-container>
 
-                <mat-header-row *matHeaderRowDef="displayedColumnsUnfinished"></mat-header-row>
-                <mat-row style="cursor:pointer;" *matRowDef="let row; columns: displayedColumnsUnfinished"></mat-row>
+                <mat-header-row *matHeaderRowDef="displayedColumnsFinished"></mat-header-row>
+                <mat-row style="cursor:pointer;" *matRowDef="let row; columns: displayedColumnsFinished"></mat-row>
             </mat-table>
             <mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No promos</mat-toolbar>
             <mat-paginator *ngIf="dataSource" [pageIndex]="page-1" [pageSize]="count"
