--- a/src/app/components/product-price-scanner/product-price-scanner.component.html
+++ b/src/app/components/product-price-scanner/product-price-scanner.component.html
@@ -97,6 +97,7 @@
     </div>
     <mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No products</mat-toolbar>
 </div>
-
+<button mat-stroked-button color="primary" class="item2" (click)="export()">Export
+    </button>
 <button mat-stroked-button color="primary" class="item2" (click)="exit()">Exit
     <mat-icon>exit_to_app</mat-icon></button>
